# roboticProject

./: .gitignore  README.md
no-vision/: KNN_classification.ipynb  coco_dateset.ipynb  config.json  dataset_creation.ipynb  model.ipynb
src/package/: CMakeLists.txt  package.xml
src/package/include/package/: jointStatePublisher.h  ur5Object.h
src/package/src/motion_planner/: jointStatePublisher.cpp  motion_planner.cpp  ur5Object.cpp
src/package/src/motion_planning/: jointStatePublisher.cpp  motion_planner.cpp  ur5Object.cpp
src/package/src/tests/: .testJointStatePublisher.cpp.swo  .testJointStatePublisher.cpp.swp  testJointStatePublisher.cpp  testObject.cpp  testUr5Movement.cpp  test_node.cpp
src/package/src/vision/: vision.py
src/package/srv/: coordinates.srv
world/: blocks.world
